syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message EchoRequest {
    int32 noOfTimes = 1;
}

message EchoResponse {
    string result = 1;
}