syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;


message MaximumRequest {
  int32 first_num = 1;
}


message MaximumResponse {
  int32 result = 1;
}
